# EitiNotifiations

./: .gitignore  CMakeLists.txt  EitiNotifiations.sln  main.cpp  readme.md
Socket1/: AES.cpp  AES.h  CRC32.h  Encrypt.cpp  Encrypt.h  RSA.cpp  RSA.h  Socket.cpp  Socket.h  Socket1.vcxproj  Socket1.vcxproj.filters  Source.cpp  Test.cpp  Thread.cpp  Thread.h  Util.cpp  Util.h
include/: DatabaseObjects.h  DatabaseService.h  JsonBuilder.h  JsonResolver.h  RSA.h  Util.h  actions.h  md5.h  rc4.h  security.h  server.h  socket.h
new/: main.cpp
new/Android/: ClientSocket.java  Header.java  JSON.java  MD5.java  RC4.java  RSA.java
new/include/: RSA.h  Util.h  rc4.h  socket.h
new/src/: RSA.cpp  Util.cpp  md5.cpp  rc4.cpp  server.cpp  socket.cpp
new/win32/: Client.cpp  Client.h  Socket.cpp  Socket.h  mainClient.cpp
src/: DatabaseService.cpp  JsonBuilder.cpp  JsonResolver.cpp  RSA.cpp  Util.cpp  jsoncpp.cpp  md5.cpp  rc4.cpp  security.cpp  server.cpp  socket.cpp  socket.cpp~
test/: application_test.cpp
tin-master/: CMakeLists.txt
win32/: Client.cpp  Client.h  Encrypt.cpp  Encrypt.h  Serialization.cpp  Serialization.h  Socket.cpp  Socket.h  TransportLayer.cpp  TransportLayer.h  mainClient.cpp  win32.vcxproj.filters
